deployment/kube-files/fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fastapi
  name: fastapi
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi-container
        image: "simona4220/suncoder-fastapi:amd64"
        imagePullPolicy: Always
        name: fastapi
        ports:
          - containerPort: 8000
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 512m
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  selector:
    app: fastapi
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30007
