deployment/kube-files/maria.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maria-deployment
  labels:
    app: maria
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maria
  template:
    metadata:
      labels:
        app: maria
    spec:
      containers:
        - name: mariadb
          image: mariadb
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "512m"
      volumes:
        - name: mysql-persistent-storage
      persistentVolumeClaim:
        claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: maria
  type: NodePort
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
      nodePort: 30000
