deployment/kube-files/react.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react
  labels:
    app: react
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
        - name: react
          image: simona4220/suncoder-react:amd64
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              memory: "512Mi"
              cpu: "512m"
---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  selector:
    app: react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
